--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
-ATLAS_URI=mongodb+srv://bscCohort:Crimsy!2345@cluster0.ws1rq5o.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URL=mongodb+srv://bscCohort:Crimsy!2345@cluster0.ws1rq5o.mongodb.net/?retryWrites=true&w=majority
 PORT=5000
