--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
-    "mongoose": "^7.0.0"
+    "mongoose": "^7.0.0",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
