--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
-ATLAS_URL=mongodb+srv://bscCohort:Crimsy!2345@cluster0.ws1rq5o.mongodb.net/books?retryWrites=true&w=majority
-PORT=5000
+ATLAS_URL=${ATLAS_URL}
+PORT=${PORT}
