--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^10.0.4",
     "serve": "^14.2.3",
     "web-vitals": "^2.1.4",
