--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.0",
     "react-markdown": "^9.0.1",
