add qr code generator component

--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
-ATLAS_URL=mongodb+srv://bsc-cohort-admin:bsc-cohort-admin@cluster0.uzd02mn.mongodb.net/books?retryWrites=true&w=majority&appName=Cluster0
-PORT=5000
+ATLAS_URL=${ATLAS_URL}
+PORT=${PORT}
